--- a/about.Rmd
+++ b/about.Rmd
@@ -2,15 +2,15 @@
 title: "Gonzalo Pérez-Rosales"
 image: "Profile_Portrait.jpg"
 links:
-  - label: '<i class="fab fa-twitter fa-lg"></i> Twitter'
-    url: "https://twitter.com/Perez_Rosales_G"
   - label: '<i class="fas fa-graduation-cap"></i> Google Scholar'
     url: "https://scholar.google.com/citations?user=qLfSUS4AAAAJ&hl=en"
   - label: '<i class="fab fa-github"></i> GitHub'
     url: "https://github.com/gonzaloprb"
+  - label: Orcid
+    url: "https://orcid.org/0000-0001-6577-3416"
   - label: '<i class="fab fa-linkedin fa-lg"></i> LinkedIn'
     url: "https://www.linkedin.com/in/gonzalo-p%C3%A9rez-rosales-40a963b1/"
-  - label: Orcid
+  - label: '<i class="fab fa-twitter fa-lg"></i> Twitter'
     url: "https://twitter.com/Perez_Rosales_G"
   - label: Instagram
     url: "https://www.instagram.com/dr.gon_perezrosales/?hl=en"
